--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kolirt/vue-web3-auth",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Web3 authentication for Vue3 apps based on WalletConnect v2",
   "author": "kolirt",
   "license": "MIT",
@@ -28,9 +28,9 @@
     "build-lib": "run-p type-check-lib build-only-lib",
     "build-only-lib": "vite build -c vite.lib.config.ts",
     "type-check-lib": "vue-tsc --noEmit -p tsconfig.lib.json --composite false",
-    "dev-docs": "vite serve -c vite.demo.config.ts",
-    "build-docs": "vite build -c vite.demo.config.ts",
-    "preview-docs": "vite preview -c vite.demo.config.ts"
+    "dev-demo": "vite serve -c vite.demo.config.ts",
+    "build-demo": "vite build -c vite.demo.config.ts",
+    "preview-demo": "vite preview -c vite.demo.config.ts"
   },
   "private": false,
   "type": "module",
