--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
-    "resolveJsonModule": true,
-
     /* Basic Options */
     // "incremental": true,                         /* Enable incremental compilation */
     "target": "ESNEXT",
@@ -33,6 +31,7 @@
     // "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
     // "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
+//    "resolveJsonModule": true,
 
     /* Strict Type-Checking Options */
     "strict": true,
@@ -56,16 +55,16 @@
     /* Module Resolution Options */
     "moduleResolution": "node",
     /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */
-//    "baseUrl": "./",
+    //    "baseUrl": "./",
     /* Base directory to resolve non-absolute module names. */
-//    "paths": {
-//      "@/*": [
-//        "./src"
-//      ],
-//      "lib": [
-//        "./lib"
-//      ]
-//    },
+    //    "paths": {
+    //      "@/*": [
+    //        "./src"
+    //      ],
+    //      "lib": [
+    //        "./lib"
+    //      ]
+    //    },
     /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                             /* List of folders to include type definitions from. */
@@ -93,5 +92,9 @@
     "forceConsistentCasingInFileNames": true
     /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["test", "demo"]
+  "exclude": [
+    "test",
+    "demo",
+    "node_modules"
+  ]
 }
