--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kolirt/vue-web3-auth",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "Web3 authentication for Vue3 apps based on WalletConnect v2",
   "author": "kolirt",
   "license": "MIT",
@@ -58,13 +58,14 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "@wagmi/core": "^1.2.0",
-    "@web3modal/ethereum": "^2.4.5",
-    "@web3modal/html": "^2.4.5",
+    "@wagmi/core": "^1.2.1",
+    "@web3modal/ethereum": "^2.4.7",
+    "@web3modal/html": "^2.4.7",
     "bootstrap": "5.3.0",
     "js-event-bus": "^1.1.1",
-    "viem": "^1.0.7",
-    "vue": "^3.3.2"
+    "viem": "^1.1.6",
+    "vue": "^3.3.2",
+    "wagmi": "^1.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
