--- a/package.json
+++ b/package.json
@@ -30,8 +30,14 @@
     "type-check-lib": "vue-tsc --noEmit -p tsconfig.lib.json --composite false",
     "dev-demo": "vite serve -c vite.demo.config.ts",
     "build-demo": "vite build -c vite.demo.config.ts",
-    "preview-demo": "vite preview -c vite.demo.config.ts"
+    "preview-demo": "vite preview -c vite.demo.config.ts",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/ --write lib/"
   },
+  "pre-commit": [
+    "lint",
+    "type-check-lib"
+  ],
   "private": false,
   "type": "module",
   "files": [
@@ -70,14 +76,20 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "npm-run-all": "^4.1.5",
+    "pre-commit": "^1.2.2",
+    "prettier": "^3.0.3",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vite-plugin-dts": "^2.3.0",
