--- a/examples/vue-cli-service/package.json
+++ b/examples/vue-cli-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "vue-cli-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^0.1.4",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
