--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kolirt/vue-web3-auth",
   "version": "0.1.6",
-  "description": "Web3 authentication for Vue3 apps based on WalletConnect v2",
+  "description": "Web3 authentication for Vue3 apps based on WalletConnect Web3Modal v2",
   "author": "kolirt",
   "license": "MIT",
   "keywords": [
