--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.ts linguist-detectable=false
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+Makefile linguist-detectable=false
