--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -19,7 +19,7 @@ body:
       label: Package configuration
       description: Show how you configured the package. You can check how to configure the package [here](https://github.com/kolirt/vue-web3-auth?tab=readme-ov-file#configuration).
       placeholder: |
-        createWeb3Auth({...
+        createWeb3Auth({
           projectId: '', // remove your projectId
           chains: [Chains.bsc, Chains.mainnet, Chains.polygon]
         })
