--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -7,6 +7,21 @@ body:
     attributes:
       value: |
         Before asking a question, please make sure that you have read through our [documentation](https://github.com/kolirt/vue-web3-auth?tab=readme-ov-file#web3-authentication-for-vue3-apps-based-on-walletconnect-web3modal-v2-and-wagmi) and existing [issues](https://github.com/kolirt/vue-web3-auth/issues).
+  - type: input
+    id: version
+    attributes:
+      label: Package version
+      placeholder: v2.1.0
+  - type: textarea
+    id: configuration
+    attributes:
+      label: Package configuration
+      description: Show how you configured the package. You can check how to configure the package [here](https://github.com/kolirt/vue-web3-auth?tab=readme-ov-file#configuration).
+      placeholder: |
+        createWeb3Auth({
+          projectId: '', // remove your projectId
+          chains: [Chains.bsc, Chains.mainnet, Chains.polygon]
+        })
   - type: textarea
     id: description
     attributes:
