--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -11,12 +11,16 @@ body:
     id: version
     attributes:
       label: Package version
+      description: |
+        Leave blank if you have not yet configured the package and have not used it.
       placeholder: v2.1.0
   - type: textarea
     id: configuration
     attributes:
       label: Package configuration
-      description: Show how you configured the package. You can check how to configure the package [here](https://github.com/kolirt/vue-web3-auth?tab=readme-ov-file#configuration).
+      description: |
+        Show how you configured the package. You can check how to configure the package [here](https://github.com/kolirt/vue-web3-auth?tab=readme-ov-file#configuration).
+        Leave blank if you have not yet configured the package and have not used it.
       placeholder: |
         createWeb3Auth({
           projectId: '', // remove your projectId
