--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -1,8 +1,11 @@
 name: 📝 deploy demo
 
 on:
-  release:
-    types: [ published ]
+  push:
+    branches:
+      - v2
+    paths:
+      - src/**
   workflow_dispatch:
 
 permissions:
