update github action

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -8,6 +8,8 @@ jobs:
   release:
     name: 🚀 Release
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - name: 📚 Checkout
         uses: actions/checkout@v3
