--- a/.prettierrc
+++ b/.prettierrc
@@ -7,18 +7,10 @@
   "singleQuote": true,
   "endOfLine": "auto",
   "plugins": [
-    "@trivago/prettier-plugin-sort-imports",
+    "prettier-plugin-organize-imports",
     "prettier-plugin-organize-attributes",
     "prettier-plugin-tailwindcss"
   ],
-  "importOrder": [
-    "^./App.vue$",
-    "<THIRD_PARTY_MODULES>",
-    "^@/(.*)$",
-    "^[./]"
-  ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true,
   "attributeGroups": [
     "^ref",
     "^v-if",
