--- a/examples/vue-cli-service/.prettierrc
+++ b/examples/vue-cli-service/.prettierrc
@@ -5,15 +5,5 @@
   "printWidth": 120,
   "semi": false,
   "singleQuote": true,
-  "endOfLine": "auto",
-  "plugins": [
-    "@trivago/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
-  "importOrder": [
-    "<THIRD_PARTY_MODULES>",
-    "^[./]"
-  ],
-  "importOrderSeparation": true,
-  "importOrderSortSpecifiers": true
+  "endOfLine": "auto"
 }
