--- a/examples/vue-cli-service/package.json
+++ b/examples/vue-cli-service/package.json
@@ -17,14 +17,12 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.5"
+    "prettier": "3.0.3"
   },
   "eslintConfig": {
     "root": true,
