--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kolirt/vue-web3-auth",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "description": "Web3 authentication for Vue3 apps based on WalletConnect Web3Modal v2",
   "author": "kolirt",
   "license": "MIT",
@@ -76,7 +76,6 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
@@ -89,6 +88,7 @@
     "pre-commit": "^1.2.2",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
