--- a/examples/issues/15-elevenliu123456/package.json
+++ b/examples/issues/15-elevenliu123456/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json}\""
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^2",
@@ -15,6 +16,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.22"
