--- a/examples/vue-cli-service/package.json
+++ b/examples/vue-cli-service/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "format": "prettier --write src/"
+    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json}\""
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^2",
@@ -22,7 +22,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "3.0.3"
+    "prettier": "^3.2.5",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "prettier-plugin-organize-imports": "^3.2.4"
   },
   "eslintConfig": {
     "root": true,
