update rollup external packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "verbatimModuleSyntax": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true
   },
   "exclude": ["test", "demo", "node_modules", "examples"]
 }
