Update Prettier configurations

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,10 +6,7 @@
   "semi": false,
   "singleQuote": true,
   "endOfLine": "auto",
-  "plugins": [
-    "prettier-plugin-organize-imports",
-    "prettier-plugin-organize-attributes"
-  ],
+  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-organize-attributes"],
   "attributeGroups": [
     "^ref",
     "^v-if",
