--- a/examples/issues/15-elevenliu123456/package.json
+++ b/examples/issues/15-elevenliu123456/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json}\""
+    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json,prettierrc}\""
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^2",
