--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json}\""
+    "type-check": "vue-tsc --noEmit -p tsconfig.json --composite false",
+    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json,prettierrc}\""
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^2",
