--- a/examples/vue-cli-service/package.json
+++ b/examples/vue-cli-service/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json}\""
+    "format": "prettier --write \"**/*.{ts,js,cjs,vue,json,prettierrc}\""
   },
   "dependencies": {
     "@kolirt/vue-web3-auth": "^2",
